--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^5.1.0",
     "express-handlebars": "^8.0.3",
     "express-validator": "^7.2.1",
-    "fs": "^0.0.1-security"
+    "fs": "^0.0.1-security",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
